fix overflow-x

--- a/css/style.css
+++ b/css/style.css
@@ -10676,7 +10676,6 @@ a.text-dark:focus {
   z-index: 11;
   animation: action 1s infinite alternate;
   border: .5px solid black;
-  background-color: rgb(0, 0, 0, 0.05);
   border-radius: 5px;
 }
 
